fixes margin error on show page so that the header is not behind the navbar

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -659,7 +659,7 @@ button.add-new-card:hover {
 }
 
 .show-pokemon-header {
-    margin-top: 60px;
+    margin-top: 120px;
     margin-bottom: 30px;
 }
     
